# min_zettel

./: .gitignore  README.md  min_zettel.py  pyproject.toml  zk
.github/workflows/: ci.yml
tests/: run_tests.py
